Added disclaimer to top of site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body onload="showSlide(0);">
+	<div style="display: flex; justify-content: center; background-color: rgba(256, 0, 0, 0.4); width: 100%;>
+		<h3 style="margin: 12px;">This webpage is a demonstration based on a sample website coded in under seven days, meant to demonstrate competency in web programming.</h3>
+	</div>
 	<div class="flex_container" id="header">
 		<div id="title">NSH Challenge</div>
 		<div id="menu_alt">
